# FORTS

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  gcp_job_template.yaml  load_env.sh  m1_monthly.parquet  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_all_experiments.sh  run_gcp_job.sh  run_local_test.sh
forts/: config.py  gcs_utils.py
forts/data_pipeline/: __init__.py  data_pipeline_setup.py
forts/experiments/: aggregate_results_by_regime.py  check_results.py  get_params.py  (+4 more)
scripts/: seed_gcs_datasets.py
terraform/: main.tf  outputs.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars.example  variables.tf
tests/: test_basic_forecasting.py  test_basic_forecasting_timemixer.py  test_basic_forecasting_timemoe.py  test_basic_forecasting_xlstm.py  test_coreset.py  test_coreset_pipeline.py  test_data_integrity.py  test_degenerate_model_detection.py  test_evaluation_pipeline_integration.py  test_finetuning.py  test_finetuning_skip.py  test_gcs_authentication.py  test_gcs_fallback.py  test_gcs_integration.py  test_in_domain_forecasting_timemixer.py  test_in_domain_forecasting_timemoe.py  test_in_domain_forecasting_xlstm.py  test_model_filtering.py  test_out_domain_forecasting_xlstm.py  test_padding.py  test_process_results_integration.py  test_seeding_script.py  test_timemixer.py  test_timemoe.py  test_training_from_scratch.py  test_training_pipeline_integration.py  test_transfer_learning.py  test_xlstm.py  test_xlstm_degenerate_refitting_integration.py
(+28 files in other folders)
